# MinecraftServerManager

./: .gitignore  CMakeLists.txt  Makefile  README.md  bit_defines.hpp  compile_commands.json  config.mk  example_mserman.conf  info.cpp  interactive.cpp  jsoncpp.cpp  main.cpp  main.hpp  operation.cpp  utility.cpp  verify.cpp  version.h.in
